# project-template

./: .cproject  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.yml  .pre-commit-config.yaml  .project  .shellcheckrc  .yamllint  CMakeLists.txt  C_CPP_project_template.cbp  C_CPP_project_template.geany.project  C_CPP_project_template.project  Makefile  README.markdown  README.md  README.txt  REUSE.toml  Source code  Vagrantfile  compose.yml  docker-compose.yml  real.README.md  real.gitattributes  real.markdownlint.yml
.amazonq/: README.md  suppress.json  suppress.json.license
.reuse/: dep5
3rd party software/: README.markdown  README.md
Build solutions/: Code::Blocks 整合式開發環境  README.md
Build_artifacts/: README.md
Buildsystem_CMake/: CMakeLists.txt  README.md
Coding style configurations/: Project_specified_coding_style.astylerc  README.markdown
Coding_style_configuration/: README.md
Coding_style_configurations/: .gitignore  README.md
Documentation/: README.markdown  README.md
Executables/: README.md
Git hooks/: README.markdown
Git_hooks/: README.md
IDE_CodeLite/: C_CPP_project_template.project  Generic Software Project Template.project  Generic_Software_Project_Template.project
IDE_Code__Blocks/: .gitignore  C_CPP_project_template.cbp  Generic Software Project Template.cbp  Generic_Software_Project_Template.cbp
IDE_Eclipse_CDT/: .cproject  .project  README.md
IDE_Eclipse_JDT/: .project
IDE_Geany/: C_CPP_project_template.project
LICENSES/: LicenseRef-Apache-2.0-If-Not-Used-In-Template-Projects.txt
(+114 files in other folders)
