cmake_minimum_required (VERSION 2.8)
project (C_CPP_project_template)
set (CMAKE_SOURCE_DIR, ../Source_code/)
message(STATUS, "CMAKE_SOURCE_DIR assigned to ${CMAKE_SOURCE_DIR}")
# aux_source_directory(${CMAKE_SOURCE_DIR} SOURCE_CODE_FILES)
# message(STATUS, "aux_source_directory assigned SOURCE_CODE_FILES ${SOURCE_CODE_FILES}")
# return()
set (CMAKE_LIBRARY_PATH, ../Libraries/)
include_directories(../Libraries)
set (CMAKE_BINARY_DIR, Build_artifacts/)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY, Build/)
set (CMAKE_EXECUTABLE_SUFFIX, executable)

add_executable(${CMAKE_PROJECT_NAME}, ${CMAKE_SOURCE_DIR}/main.cpp)
return()